<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="600:397"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cover" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:srcCompat="@drawable/ic_profile" />

    <Button
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="Promlert Lovichit"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/image_puls"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/image_eye"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:srcCompat="@drawable/ic_add_story" />

    <ImageView
        android:id="@+id/image_eye"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toStartOf="@+id/image_human"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_puls"
        app:layout_constraintTop_toTopOf="@+id/image_puls"
        app:srcCompat="@drawable/ic_view_as" />

    <ImageView
        android:id="@+id/image_human"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toStartOf="@+id/image_..."
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_eye"
        app:layout_constraintTop_toTopOf="@+id/image_eye"
        app:srcCompat="@drawable/ic_edit_profile" />

    <ImageView
        android:id="@+id/image_..."
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_human"
        app:layout_constraintTop_toTopOf="@+id/image_human"
        app:srcCompat="@drawable/ic_more" />

    <Button
        android:id="@+id/add_to_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:text="@string/add_to_story"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/image_puls"
        app:layout_constraintStart_toStartOf="@+id/image_puls"
        app:layout_constraintTop_toTopOf="@+id/image_puls" />

    <Button
        android:id="@+id/view_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:text="@string/view_as"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/image_eye"
        app:layout_constraintStart_toStartOf="@+id/image_eye"
        app:layout_constraintTop_toTopOf="@+id/image_eye" />

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/image_human"
        app:layout_constraintStart_toStartOf="@+id/image_human"
        app:layout_constraintTop_toTopOf="@+id/image_human" />

    <Button
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/image_..."
        app:layout_constraintStart_toStartOf="@+id/image_..."
        app:layout_constraintTop_toTopOf="@+id/image_..." />

    <Button
        android:id="@+id/goes_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/goes_to"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="สวนกุหลาบวิทยาลัย"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/goes_to"
        app:layout_constraintTop_toTopOf="@+id/goes_to" />

    <Button
        android:id="@+id/lives_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/lives_in"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="กรุงเทพมหานคร"
        app:layout_constraintStart_toEndOf="@+id/lives_in"
        app:layout_constraintTop_toTopOf="@+id/lives_in" />

    <Button
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/from"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <Button
        android:id="@+id/bankok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="กุงเทพมหานคร"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/from"
        app:layout_constraintTop_toTopOf="@+id/from" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/add_to_story"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@+id/add_to_story"
        app:layout_constraintTop_toBottomOf="@+id/add_to_story"
        app:srcCompat="@drawable/ic_study" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_live" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_from" />
</androidx.constraintlayout.widget.ConstraintLayout>